// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.mesh.v2beta1;

import "pbcatalog/v2beta1/protocol.proto";

message ExposeConfig {
  repeated ExposePath expose_paths = 1;
}

message ExposePath {
  uint32 listener_port = 1;
  string path = 2;
  uint32 local_path_port = 3;
  hashicorp.consul.catalog.v2beta1.Protocol protocol = 4;
}
